# Kanban-board

backend/: pyproject.toml
backend/app/: enums.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1443d02c8c2e_add_taskstatusenum_and_add_task_status_.py  db7aa8ff0b9a_first_revision_all_models_except_.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/users/: login.py  user.py
backend/app/core/: config.py  database.py  security.py
backend/app/services/board/: board.py
backend/app/services/column/: column.py
backend/app/services/comment/: comment.py
backend/app/services/project/: project.py
backend/app/services/task/: task.py
backend/app/services/user/: user.py
frontend/my-app/app/: layout.tsx  page.tsx
frontend/my-app/app/auth/login/: page.tsx
frontend/my-app/app/auth/register/: page.tsx
frontend/my-app/app/workspaces/: page.tsx
frontend/my-app/components/auth/: RegistrationForm.tsx
frontend/my-app/components/shared/: ParticlesBackground.tsx
frontend/my-app/components/workspace/: CreateWorkspaceModal.tsx  WorkspaceCard.tsx
frontend/my-app/config/: api.ts
frontend/my-app/lib/: api.ts
frontend/my-app/src/app/: layout.tsx
frontend/my-app/src/app/auth/login/: page.tsx
frontend/my-app/src/app/auth/register/: page.tsx
frontend/my-app/src/app/workspaces/: page.tsx
frontend/my-app/src/components/auth/: LoginForm.tsx
frontend/my-app/src/components/workspace/: ProfileSidebar.tsx
frontend/my-app/src/config/: api.ts
