[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "denisshokolad1221@gmail.com, ruslankapustian001@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
